addon/network-policy/foo-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foo-deny-egress
spec:
  podSelector:
    matchLabels:
       app: foo
  policyTypes:
  - Egress
  egress: []
