addon/network-policy/web-allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all
  namespace: default
spec:
  podSelector:
     matchLabels:
        app: web
  ingress:
  - {}
